# simple_pico

./: .gitignore  .gitmodules  README.md
app/: Makefile  core1.c  core1.h  crt0.S  led.c  led.h  main.c  pico.ld  picosystem.c  startup.c  startup_pico.S
demo/: CMakeLists.txt  test.c
demo_rtos/: CMakeLists.txt  main.c
